--- a/Backend/.env
+++ b/Backend/.env
@@ -3,7 +3,8 @@ MONGO_URI=mongodb+srv://mukultricon:Xc16xL85iWUWUaPZ@cluster0.im44s.mongodb.net/
 
 
 # Your current IP address (152.58.230.232) has been added to enable local connectivity. 
+# Enabled for all IP
 # mukultricon
-# Xc16xL85iWUWUaPZ
+# Xc16xL85iWUWUaPZ  
 
 
